Quote Management commit

--- a/LWC/Logistic/force-app/main/default/lwc/invoice/invoice.html
+++ b/LWC/Logistic/force-app/main/default/lwc/invoice/invoice.html
@@ -151,6 +151,7 @@
         label="Total"
         name="Total"
         value={Total}
+        step="0.1"
         onchange={handleTotal}
         required="required"
         type="number"
