--- a/LWC/Logistic/force-app/main/default/lwc/invoice/invoice.html
+++ b/LWC/Logistic/force-app/main/default/lwc/invoice/invoice.html
@@ -1,7 +1,7 @@
 <template>
 <lightning-card>
   <div class="slds-align_absolute-center slds-m-around--xx-large">
-    <h3 class="slds-text-heading_large">Invoice</h3>
+    <h3 class="slds-text-heading_large">Logistic Service</h3>
   </div>
 
    <div class="container-fluid slds-m-around--xx-large">
@@ -44,13 +44,14 @@
         ></lightning-input>
       </div>    
       <div class="form-group">
-        <lightning-combobox 
-          name="progress"
-          label="Parcel Status"
+        <lightning-input 
+          name="Status"
+          label="Status"
+          type="text"
           onchange={hanldeStatus}
-          value={value}
-          placeholder="Select Progress"
-          options={options}></lightning-combobox>
+          value={Status}
+          autocomplete="off"
+          placeholder="Placed"></lightning-input>
       </div>    
      </lightning-layout-item>
      </lightning-layout>   
@@ -161,7 +162,18 @@
     </lightning-layout-item>
     </lightning-layout>   
    </div>
-    <div class="slds-align_absolute-center">
+   <div class="slds-align_absolute-center slds-m-around_medium">
+    <lightning-combobox
+    name="Driver"
+    label="Driver"
+    value={driver}
+    placeholder="Select Driver"
+    options={driverOptions}
+    onchange={handleDriverChange}
+  >
+  </lightning-combobox>
+   </div>
+    <div class="slds-align_absolute-center slds-m-around_medium">
       <lightning-button
       label="Calculate"
       onclick={calculate}
